# yagal

./: .gitignore  CMakeLists.txt  Makefile  evaluator.c
PyYagal/: CMakeLists.txt  setup.py  yagal.pyx
examples/: max_ones.py
examples/c/: CMakeLists.txt  max_ones.c
examples/python/: CMakeLists.txt  max_ones.py
src/: CMakeLists.txt  config.h  evaluator.c  evaluator.h  yagal.c  yagal.h
