PROJECT(YAGAL)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")

ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/src")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/PyYagal")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/examples/c")
